--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         // ゲーム開始処理
         function startGame() {
-            const inputKey = "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"
+            const inputKey = "#"
             apiKey = inputKey;
             gameState.grade = document.getElementById("grade-select").value;
 
